--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "^2.0.1"
   },
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run views\"",
@@ -27,5 +27,11 @@
     "@viewstools/e2e": "^0.1.3",
     "@viewstools/morph": "^15.0.0",
     "concurrently": "^4.0.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
