--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@viewstools/animations": "^1.0.6",
-    "@viewstools/tables": "^1.0.8",
     "emotion": "^9.2.9",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.1"
   },
   "scripts": {
@@ -18,13 +15,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "react-scripts start",
-    "views": "views-morph src --watch --as react-dom",
+    "views": "sleep 10 && views-morph src --watch --as react-dom",
     "prebuild": "views-morph src --as react-dom",
     "predeploy": "npm run build",
     "deploy": "surge -p build"
   },
   "devDependencies": {
-    "@viewstools/e2e": "^0.1.3",
     "@viewstools/morph": "^16.0.0",
     "concurrently": "^4.0.1"
   },
