feat: upgrade to the latest views

--- a/package.json
+++ b/package.json
@@ -3,25 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emotion": "^9.2.9",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-scripts": "^2.0.1"
+    "emotion": "^10.0.9",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.0"
   },
   "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run views\"",
+    "start": "concurrently --names 'react,views' --handle-input npm:dev npm:views",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start",
-    "views": "sleep 10 && views-morph src --watch --as react-dom",
-    "prebuild": "views-morph src --as react-dom",
-    "predeploy": "npm run build",
-    "deploy": "surge -p build"
+    "dev": "sleep 2 && react-scripts start",
+    "views": "views-morph src --watch --as react-dom",
+    "prebuild": "views-morph src --as react-dom"
   },
   "devDependencies": {
-    "@viewstools/morph": "^16.0.0",
+    "@viewstools/morph": "^18.2.0",
     "concurrently": "^4.0.1"
   },
   "browserslist": [
